test/bad/lambdas/lambda08.px

func f(g: Int->Int->Int): Void def
    return

f(_+_-_)
